--- a/proteges_pyes_s_backend/Cargo.toml
+++ b/proteges_pyes_s_backend/Cargo.toml
@@ -12,3 +12,5 @@ tokio = { version = "1.48.0", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["cors"] }
 bcrypt = "0.17.0"
 chrono = { version = "0.4", features = ["serde"] }
+tracing = "0.1.43"
+tracing-subscriber = "0.3.22"
