--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/bottom-tabs": "^7.8.8",
     "@react-navigation/native": "^7.1.22",
     "@react-navigation/native-stack": "^7.8.2",
     "@react-navigation/stack": "^7.6.8",
+    "docx": "^9.5.1",
     "expo": "~54.0.25",
     "expo-camera": "^17.0.9",
+    "expo-constants": "~18.0.12",
+    "expo-device": "~8.0.10",
+    "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.7",
+    "expo-notifications": "~0.32.15",
     "expo-print": "~15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.8",
